--- a/src/less/base-styles.less
+++ b/src/less/base-styles.less
@@ -1,8 +1,12 @@
 
 body{
-  font-family: 'Hind', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: @dark-grey;
   font-size: 16px;
+}
+
+.font-monospace{
+  font-family: 'Inconsolata', sans-serif;
 }
 
 h2{
@@ -18,14 +22,6 @@ h4{
   margin-bottom: @default-margin;
 }
 
-h3.content-heading{
-  margin: @default-margin / 2 @default-margin @default-margin;
-}
-
-.nav-left-inline{
-  display: none;
-}
-
 .alert{
   text-align: center;
 }
@@ -38,6 +34,3 @@ h3.content-heading{
   margin-bottom: @default-margin;
 }
 
-.font-monospace{
-  font-family: 'Inconsolata', sans-serif;
-}
