--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -17,8 +17,8 @@
 @blue-2-3: #0B3983;
 @blue-2-4: #072C67;
 
-@dark-grey: #292929;
-@light-grey: #CDCDCD;
+@dark-grey: #505050;
+@light-grey: #616161;
 
 @default-padding: 20px;
 @default-margin: 20px;
