--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -1,5 +1,4 @@
 
-
 .site-content{
 
   display: flex;
@@ -7,14 +6,21 @@
   min-height: 100vh;
 
   header{
+    padding: @default-padding;
+    border-bottom: 1px solid @dark-grey;
+
+    .mix-name{
+      padding: 0;
+      margin: 0;
+      width: 15%;
+      display: inline-block;
+    }
 
   }
 
-
   .content-main{
-
     flex: 1;
-
+    padding: @default-padding;
   }
 
 
