--- a/src/less/base-styles.less
+++ b/src/less/base-styles.less
@@ -5,6 +5,10 @@ body{
   font-size: 16px;
 }
 
+a, a:visited, a:active, a:hover{
+  color: inherit;
+}
+
 .font-monospace{
   font-family: 'Inconsolata', sans-serif;
 }
