Home page image

--- a/src/less/base-styles.less
+++ b/src/less/base-styles.less
@@ -9,6 +9,10 @@ a, a:visited, a:active, a:hover{
   color: inherit;
 }
 
+img{
+  width: 100%;
+}
+
 .font-monospace{
   font-family: 'Inconsolata', sans-serif;
 }
