--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,6 +1,7 @@
 header{
 
   padding: @default-padding;
+  margin-bottom: @default-margin;
   border-bottom: 1px solid @dark-grey;
   position: relative;
 
