--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -7,12 +7,15 @@
 
   .content-main{
     flex: 1;
-    padding: @default-padding;
+
+    .page-content{
+      margin-bottom: @default-margin;
+    }
+
   }
 
 
 }
-
 
 footer{
 
