Home page image

--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -21,7 +21,7 @@ footer{
 
   text-align: right;
   padding: 10px;
-  background: @dark-grey;
+  background: black;
 
   a, a:hover, a:active, a:visited{
     color: white;
