--- a/src/less/misc.less
+++ b/src/less/misc.less
@@ -1,5 +1,20 @@
 
 .home-image-container{
+
   padding-top: @default-padding;
   margin-bottom: @default-margin;
+  position: relative;
+
+  p.home-image-blurb{
+
+    position: absolute;
+    width: 60%;
+    color: white;
+    bottom: 5px;
+    font-size: 2.5em;
+    text-align: center;
+    left: 20%;
+
+  }
+
 }
