--- a/src/less/header.less
+++ b/src/less/header.less
@@ -10,6 +10,11 @@ header{
     margin: 0;
     width: 15%;
     display: inline-block;
+
+    a{
+      text-decoration: none;
+    }
+
   }
 
   .nav-top{
