--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -8,7 +8,7 @@
   .content-main{
     flex: 1;
 
-    .page-content{
+    .content-page{
       padding: @default-padding;
       margin-bottom: @default-margin;
     }
